# rmidi

./: DESCRIPTION  NAMESPACE  README  configure.ac  mkdist
R/: rmidi.R  scales.R  zzz.R
examples/: twoharm.R  twoharm.R~
man/: midi.colname.Rd  midi.controller.Rd  midi.get.ppq.Rd  midi.get.tempo.Rd  midi.matrix.Rd  midi.note.Rd  midi.play.Rd  midi.read.file.Rd  midi.recognised.commands.Rd  midi.scale.Rd  midi.set.ppq.Rd  midi.set.tempo.Rd
src/: Makevars  Makevars.in  config.h  config.h.in  midifile.c  midifile.h  read.c  rmidi.c  rmidi.h
